# optuna-orthobo

./: .gitignore  README.md  main.py  pyproject.toml
configs/: config.yaml
configs/benchmark/: ackley10.yaml  hartmann6.yaml  levy16.yaml
configs/paths/: default.yaml
configs/sampler/: naive.yaml  orthobo.yaml  vanilla.yaml
scripts/: aggregate_and_plot.py  baseline.py  run_benchmark.py  run_experiments.sh
src/samplers/: base.py  marginal.py  naive_marginal.py  orthobo.py  vanilla.py
src/utils/: __init__.py  hyperposterior.py  ortho_acquisition.py  theta_extraction.py
