[project]
name = "optuna-orthobo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "botorch>=0.17.2",
    "hydra-core>=1.3.2",
    "ipykernel>=7.2.0",
    "load-dotenv>=0.1.0",
    "matplotlib>=3.10.9",
    "optuna>=4.8.0",
    "optuna-integration>=4.8.0",
    "torch>=2.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
